refactor: EditableLabel && Move button && autres